--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 *{
-    font-family: verdana;
+    font-family: Raleway;
     margin: 0;
 }
 
 body {
-    background: #eee;
+    background: gold;
 }
 
 .wrapper {
@@ -13,30 +13,101 @@ body {
     margin: 0 auto;
 }
 
+
+
+nav {
+    background: #333;
+    /*display: flex;
+    justify-content: space-between;*/
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav a{
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    display: block;
+    padding: 10px;
+}
+
+nav  a:hover{
+    background-color: #555;
+}
+
+a.tw{
+    background: url(../img/tw.png) no-repeat center;
+    background-size: 80%;
+}
+
+a.fb{
+    background: url(../img/fb.png) no-repeat center;
+    background-size: 80%;
+}
+
+.social a{
+    text-indent: -10000px;
+}
+
+nav ul.social{
+    flex: 1 1 0;
+    display: flex;
+}
+
+nav ul.social li{
+    flex: 1 1 0;
+}
+
+.social {
+    max-width: 80px;
+    margin: 0 auto;
+}
+
+
+@media screen and (min-width: 768px){
+
+    nav ul{
+        display: flex;
+    }
+
+    nav li{
+        flex: 1 1 0;
+    }
+
+    nav {
+     display: flex;
+    justify-content: space-between;
+    }
+
+    .social{
+        margin: 0;
+    }
+
+}
+
+
 .flex-container {
     display: flex;
-    background: black;
+    flex-wrap: wrap;
+    flex-flow: row;
 }
 
 .box {
-    height: 100px;
-    width: 320px;
+    height: 50px;
+    flex: 0 0 100px;
 }
 
 .one {
     background: red;
-    flex-grow: 2;
-    flex-shrink: 1;
 }
 
 .two {
     background: blue;
-    flex-grow: 3;
-    flex-shrink: 2;
 }
 
 .three {
     background: green;
-    flex-grow: 1;
-    flex-shrink: 10;
-}
+
