--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 .wrapper {
     width: 100%;
-    max-width: 960px;
+    max-width: 860px;
     margin: 0 auto;
 }
 
@@ -66,6 +66,22 @@ nav ul.social li{
     margin: 0 auto;
 }
 
+#blocks{
+    margin: 20px;
+}
+
+article{
+    background: #eee;
+    margin-bottom: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+article h2 {
+    text-align: center;
+    font-size: 20px;
+    margin: 10px 0;
+}
 
 @media screen and (min-width: 768px){
 
@@ -84,6 +100,16 @@ nav ul.social li{
 
     .social{
         margin: 0;
+    }
+
+    #blocks{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    article{
+        flex: 0 1 32%;
     }
 
 }
