--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,6 @@ body {
 
 nav {
     background: #333;
-    /*display: flex;
-    justify-content: space-between;*/
 }
 
 nav ul {
@@ -66,6 +64,14 @@ nav ul.social li{
     margin: 0 auto;
 }
 
+.subtitle{
+    margin: 20px;
+    padding: 20px;
+    background: #ccc;
+    text-align: center;
+    font-size: 40px;
+}
+
 #blocks{
     margin: 20px;
 }
@@ -102,16 +108,16 @@ article h2 {
         margin: 0;
     }
 
-    #blocks{
+    /*#blocks{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-    }
+    }*/
 
-    article{
+    /*article{
         flex: 0 1 32%;
     }
-
+*/
 }
 
 
