--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ nav ul.social li{
     box-shadow: 6px 6px 3px #888888;
 }
 
-#blocks{
+.blocks{
     margin: 20px;
 }
 
@@ -96,7 +96,7 @@ img {
     margin-bottom: 20px;
 }
 
-@media screen and (min-width: 980px){
+@media screen and (min-width: 982px){
 
     nav ul{
         display: flex;
@@ -117,7 +117,7 @@ img {
     }
 
 
-    #blocks{
+    .blocks{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -125,16 +125,28 @@ img {
     }
 
     #first{
-    min-width: 394px;
-}
+    min-width: 400px;
+    flex: 1 1;
+    margin-right: 20px;
+    }
 
     article{
         flex: 0 1 32%;
         margin-bottom: 20px;
+        box-sizing: border-box;
+    }
+
+    .imagefit{
+        /*flex: 0 1 55%;*/
     }
 
     span{
-        flex: 0 1 55%;
+        flex: 1 1 ;
+    }
+
+    .article-sizing{
+        flex: 0 1 32%;
+        justify-content: space-between;
     }
 
 }
