--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     margin: 0;
 }
 
+p{
+    font-family: Arvo, serif;
+}
+
 body {
     background: gold;
 }
@@ -70,6 +74,8 @@ nav ul.social li{
     text-align: center;
     font-size: 40px;
     box-shadow: 6px 6px 3px #888888;
+    font-family: Raleway;
+    font-weight: bold;
 }
 
 .blocks{
@@ -88,6 +94,7 @@ article h2 {
     text-align: center;
     font-size: 20px;
     margin: 10px 0;
+    font-family: Playfair Display;
 }
 
 img {
@@ -105,6 +112,7 @@ img {
 
     nav li{
         flex: 1 1 0;
+        font-family: Rubik;
     }
 
     nav {
@@ -128,6 +136,10 @@ img {
     min-width: 400px;
     flex: 1 1;
     margin-right: 20px;
+    }
+
+    #first ul {
+        font-family: Arvo, serif;
     }
 
     article{
