--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,11 @@ nav ul.social li{
     font-weight: bold;
 }
 
+.green_bold{
+    color: #027220;
+    font-weight: bold;
+}
+
 .blocks{
     margin: 20px;
 }
@@ -95,6 +100,7 @@ article h2 {
     font-size: 20px;
     margin: 10px 0;
     font-family: Playfair Display;
+    color: maroon;
 }
 
 img {
@@ -112,7 +118,7 @@ img {
 
     nav li{
         flex: 1 1 0;
-        font-family: Rubik;
+        font-family: Libre Franklin;
     }
 
     nav {
@@ -148,13 +154,6 @@ img {
         box-sizing: border-box;
     }
 
-    .imagefit{
-        /*flex: 0 1 55%;*/
-    }
-
-    span{
-        flex: 1 1 ;
-    }
 
     .article-sizing{
         flex: 0 1 32%;
