--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@ p{
     font-family: Arvo, serif;
 }
 
+.apptitles{
+    text-align: center;
+    font-family: Cabin Sketch;
+    color: navy;
+    font-size: 60px;
+}
+
 body {
     background: gold;
 }
