--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ p{
     font-size: 60px;
 }
 
+.image_position{
+    vertical-align: middle;
+}
+
 body {
     background: gold;
 }
@@ -158,7 +162,7 @@ img {
     }
 
     #first{
-    min-width: 400px;
+    min-width: 480px;
     flex: 1 1;
     margin-right: 20px;
     }
