--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,13 @@ nav ul.social li{
 
 #londonred {
     animation: fadeIn 1s forwards 4.5s,
-    blackToRed 1s forwards 5.5s
+    blackToRed 1s forwards 5.5s,
+    toBold 1s forwards 5.5s
+}
+
+@keyframes toBold {
+    0% {font-weight: normal}
+    100% {font-weight: bold}
 }
 
 @keyframes blackToRed {
