Create blue bold keywords in About Me section

--- a/css/style.css
+++ b/css/style.css
@@ -144,10 +144,18 @@ nav ul.social li{
     100% {opacity: 1}
 }
 
+.boldBlue {
+    font-weight: bold;
+    color: blue;
+}
+
 .secondlist {
     opacity: 0;
     animation: fadeIn 1s forwards 6.5s;
 }
+
+
+
 
 td p {
     opacity: 0;
