--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ p{
     font-family: Arvo, serif;
 }
 
+.about_me_header {
+    font-size: 1.5em;
+}
+
 .apptitles{
     text-align: center;
     font-family: Cabin Sketch;
