--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ nav ul {
 }
 
 nav li {
-    font-family: Libre Franklin;
+    font-family: Arvo, serif;
 }
 
 nav a{
@@ -298,7 +298,7 @@ img {
 
     nav li{
         flex: 1 1 0;
-        font-family: Libre Franklin;
+        font-family: Arvo, serif;
     }
 
     nav {
